RESOLVED FIXED26900
AX: Manual spell check with Command-; does not bring up suggestions
https://bugs.webkit.org/show_bug.cgi?id=26900
Summary AX: Manual spell check with Command-; does not bring up suggestions
chris fleizach
Reported 2009-07-01 13:36:34 PDT
Manual spell check with Command-; whilst finding the mis spelled word does not bring up suggestions within the context menu. When on a mis spelled word with command-;, pressing Vo-Shift-M for the context menu does not result in any suggestions within the menu.
Attachments
patch (12.27 KB, patch)
2009-07-01 14:39 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2009-07-01 14:39:50 PDT
Beth Dakin
Comment 2 2009-07-01 14:45:47 PDT
Comment on attachment 32142 [details] patch > +IntPoint AccessibilityRenderObject::clickPoint() const > +{ > + // if we're asked to perform a show menu on an editable web area, > + // the click point should be where the selection is > + if (isWebArea() && !isReadOnly()) { > + VisibleSelection visSelection = selection(); > + VisiblePositionRange range = VisiblePositionRange(visSelection.visibleStart(), visSelection.visibleEnd()); > + IntRect bounds = boundsForVisiblePositionRange(range); > +#if PLATFORM(MAC) > + bounds.setLocation(m_renderer->document()->view()->screenToContents(bounds.location())); > +#endif > + return IntPoint(bounds.x() + (bounds.width() / 2), bounds.y() - (bounds.height() / 2)); > + } > + > + return AccessibilityObject::clickPoint(); > +} This is just a style nit-pick, but how about you do the generic case as an early return like: if (!isWebArea() || isReadOnly()) return AccessibilityObject::clickPoint(); VisibleSelection visSelection = selection(); … r=me!
chris fleizach
Comment 3 2009-07-01 14:50:16 PDT
will fix...
chris fleizach
Comment 4 2009-07-01 15:01:32 PDT
Note You need to log in before you can comment on or make changes to this bug.