Bug 26900: AX: Manual spell check with Command-; does not bring up suggestions https://bugs.webkit.org/show_bug.cgi?id=26900

Canonical link: https://commits.webkit.org/37115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45452 268f45cc-cd09-0410-ab3c-d52691b4dbfc