WebCore/accessibility/AccessibilityObject.h
@@ -285,7 +285,7 @@ public:
     virtual IntRect boundingBoxRect() const;
     virtual IntRect elementRect() const;
     virtual IntSize size() const;
-    IntPoint clickPoint() const;
+    virtual IntPoint clickPoint() const;
     
     virtual KURL url() const;
     virtual PlainTextRange selectedTextRange() const;
