WebKitTools/DumpRenderTree/win/AccessibilityUIElementWin.cpp
@@ -214,6 +214,16 @@ double AccessibilityUIElement::height()
     return height;
 }
 
+double AccessibilityUIElement::clickPointX()
+{
+    return 0;
+}
+
+double AccessibilityUIElement::clickPointY()
+{
+    return 0;
+}
+
 double AccessibilityUIElement::intValue()
 {
     BSTR valueBSTR;
